@@ -1,98 +1,124 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<parent>
-		<artifactId>weasis-core-parent</artifactId>
-		<groupId>org.weasis.core</groupId>
-		<version>3.6.0-SNAPSHOT</version>
-		<relativePath>../weasis-core-parent/pom.xml</relativePath>
-	</parent>
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>weasis-core-ui</artifactId>
-	<packaging>bundle</packaging>
-	<name>Weasis UI API (j2se) [${project.artifactId}]</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <parent>
+    <artifactId>weasis-core-parent</artifactId>
+    <groupId>org.weasis.core</groupId>
+    <!--suppress MavenPropertyInParent -->
+    <version>${revision}${changelist}</version>
+    <relativePath>../weasis-core-parent/pom.xml</relativePath>
+  </parent>
+  <modelVersion>4.0.0</modelVersion>
+  <artifactId>weasis-core-ui</artifactId>
+  <packaging>jar</packaging>
+  <name>Core - Core UI API (Swing) [${project.artifactId}]</name>
 
-	<properties>
-		<bundle.namespace>org.weasis.core.ui</bundle.namespace>
-	</properties>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>copy-dependency</id>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <includeArtifactIds>
+                lablib-checkboxtree,jxlayer,LGoodDatePicker,xchart,VectorGraphics2D
+              </includeArtifactIds>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>biz.aQute.bnd</groupId>
+        <artifactId>bnd-maven-plugin</artifactId>
+        <configuration>
+          <bnd>
+            -includeresource.all: lib/=target/dependency/;lib:=true
+            Import-Package: \
+            com.sun.xml.internal.bind;resolution:=optional,javax.xml.bind;version=!,\
+            javax.xml.bind.annotation;version=!,javax.xml.bind.annotation.adapters;version=!,\
+            com.sun.xml.bind.v2;resolution:=optional,!sun.swing,*
+            Export-Package: !org.weasis.core.ui.internal,org.weasis.core.ui.*
+            -exportcontents: it.cnr.imaa.*,org.jdesktop.jxlayer.*,com.github.lgooddatepicker.*,\
+            com.privatejgoodies.*,org.knowm.xchart.*,de.erichseifert.*
+          </bnd>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            --illegal-access=warn
+            --add-opens java.desktop/java.beans=ALL-UNNAMED
+          </argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<configuration>
-					<instructions>
-						<!-- Force to import jaxb binding classes (supports jaxb inside or outside jdk) -->
-						<Import-Package>com.sun.xml.internal.bind;resolution:=optional,
-							javax.xml.bind;version=!,
-							javax.xml.bind.annotation;version=!,
-							javax.xml.bind.annotation.adapters;version=!,
-							com.sun.xml.bind.v2;resolution:=optional,
-							!sun.swing,*</Import-Package>
-						<Bundle-Activator>${bundle.namespace}.internal.Activator</Bundle-Activator>
-						<!-- add for Xchart: ,org.knowm.xchart.*,org.knowm.xchart.style.*,org.knowm.xchart.style.colors.*,org.knowm.xchart.style.lines.*,org.knowm.xchart.style.markers.*,de.erichseifert.* -->
-						<Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*,it.cnr.imaa.*,org.jdesktop.jxlayer.*,com.github.lgooddatepicker.*,com.privatejgoodies.*,org.knowm.xchart.*,org.knowm.xchart.style.*,org.knowm.xchart.style.colors.*,org.knowm.xchart.style.lines.*,org.knowm.xchart.style.markers.*,de.erichseifert.*</Export-Package>
-						<!-- Import only classes, will exclude *.RSA and *.SF files to avoid invalid signature issue. -->
-						<Embed-Dependency>*;scope=compile;inline=org.**|it.**</Embed-Dependency>
-					</instructions>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+  <dependencies>
+    <dependency>
+      <groupId>org.weasis.core</groupId>
+      <artifactId>weasis-core-api</artifactId>
+      <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.weasis.thirdparty</groupId>
+      <artifactId>jaxb-osgi</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.weasis.thirdparty</groupId>
+      <artifactId>docking-frames</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>it.cnr.imaa.essi</groupId>
+      <artifactId>lablib-checkboxtree</artifactId>
+      <version>3.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.swinglabs</groupId>
+      <artifactId>jxlayer</artifactId>
+      <version>3.0.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.lgooddatepicker</groupId>
+      <artifactId>LGoodDatePicker</artifactId>
+      <version>11.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.knowm.xchart</groupId>
+      <artifactId>xchart</artifactId>
+      <version>3.5.0</version>
+    </dependency>
+    <dependency>
+      <groupId>de.erichseifert.vectorgraphics2d</groupId>
+      <artifactId>VectorGraphics2D</artifactId>
+      <version>0.11</version>
+    </dependency>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.weasis.core</groupId>
-			<artifactId>weasis-core-api</artifactId>
-			<version>${project.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.weasis.thirdparty</groupId>
-			<artifactId>jaxb-osgi</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.weasis.thirdparty</groupId>
-			<artifactId>docking-frames</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>it.cnr.imaa.essi</groupId>
-			<artifactId>lablib-checkboxtree</artifactId>
-			<version>3.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.swinglabs</groupId>
-			<artifactId>jxlayer</artifactId>
-			<version>3.0.4</version>
-		</dependency>
-		<dependency>
-			<groupId>com.github.lgooddatepicker</groupId>
-			<artifactId>LGoodDatePicker</artifactId>
-			<version>10.3.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.knowm.xchart</groupId>
-			<artifactId>xchart</artifactId>
-			<version>3.5.0</version>
-		</dependency>
-
-		<!-- FOR TESTS -->
-		<dependency>
-			<groupId>org.assertj</groupId>
-			<artifactId>assertj-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.powermock</groupId>
-			<artifactId>powermock-module-junit4</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.powermock</groupId>
-			<artifactId>powermock-api-mockito2</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.google.code.bean-matchers</groupId>
-			<artifactId>bean-matchers</artifactId>
-		</dependency>
-	</dependencies>
+    <!-- FOR TESTS -->
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito2</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.bean-matchers</groupId>
+      <artifactId>bean-matchers</artifactId>
+    </dependency>
+  </dependencies>
 </project>
